--- a/package.json
+++ b/package.json
@@ -3,6 +3,22 @@
     "description": "Acquire metadata by querying 3rd party APIs",
     "vesion": "0.0.0",
     "main": "metadata.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/vankasteelj/mdata.git"
+    },
+    "license": "MIT",
+    "keywords": [
+        "metadata",
+        "image",
+        "poster",
+        "screenshot",
+        "api",
+        "tmdb",
+        "tvdb",
+        "omdb",
+        "fanart"
+    ],
     "scripts": {
         "test": "node ./test.js"
     },
