--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mdata",
     "description": "Acquire metadata by querying 3rd party APIs",
-    "vesion": "0.0.0",
+    "version": "0.0.1",
     "main": "metadata.js",
     "repository": {
         "type": "git",
