--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "fanart.tv": "^2.1.2",
     "omdbapi": "4.0.0",
-    "tmdbapi": "^1.1.3",
+    "tmdbapi": "2.0.0",
     "tvdbapi": "2.1.0"
   }
 }
